@@ -228,3 +228,5 @@
 	* Stubbed out 'SyClock' in 'sy/syclock.cpp' and 'sy/syclock.h'.
 2015-03-15 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented PLL algorithm in 'sy/syclock.cpp' and 'sy/syclock.h'.
+2015-03-15 Fred Gleason <fredg@paravelsystems.com>
+	* Added sytone(8) in 'tests/sytone.cpp' and 'test/sytone.h'.
